# teste-repo

./: CHANGELOG.md  pyproject.toml
.github/workflows/: ci-cd.yaml  linter.yaml  release.yaml  ruff.yaml
src/: module.py
