[project]
name = "teste"
version = "1.1.0"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.remote]
ignore_token_for_push = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",
    "PL",
    "PERF",
    "FAST",
    "NPY",
]
preview = true
exclude = ["tests/*"]